data/derived/sp14/progs/unify/prog0713.ml.out
Characters 19-20:
  let g1 () = build (2, 2);;
                     ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
